// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CompanyNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="company_name"
      >
        Nazwa pracodawcy
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="Nazwa pracodawcy"
          name="company_name"
          placeholder="Nazwa pracodawcy"
          value="3232"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyNameField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos RGiG"
  id="testId"
  label="Nazwa pracodawcy"
  name="company_name"
  placeholder="Nazwa pracodawcy"
  value=""
/>
`;

exports[`<CompanyNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="company_name"
      >
        CompanyName*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="CompanyName"
          name="company_name"
          placeholder="Nazwa pracodawcy*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="company_name"
      >
        CompanyName
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos RGiG"
          id="testId"
          label="CompanyName"
          name="company_name"
          placeholder="Nazwa pracodawcy"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
